Closed
Bug 1293194
Opened 9 years ago
Closed 9 years ago
Building with --disable-eme fails with GMPDecoderModule.cpp:15:30: fatal error: mozilla/EMEUtils.h: No such file or directory
Categories
(Core :: Audio/Video: GMP, defect, P1)
Core
Audio/Video: GMP
Tracking
()
RESOLVED
FIXED
mozilla51
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | unaffected |
| firefox50 | --- | fixed |
| firefox51 | --- | fixed |
People
(Reporter: glandium, Assigned: JamesCheng)
References
Details
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
cpearce
:
review+
ritu
:
approval-mozilla-aurora+
|
Details |
No description provided.
| Reporter | ||
Comment 1•9 years ago
|
||
Relatedly, there is also this error with --disable-eme:
In file included from $srcdir/dom/media/gmp/GMPCDMCallbackProxy.cpp:7:0,
from $objdir/dom/media/gmp/Unified_cpp_dom_media_gmp0.cpp:29:
$srcdir/dom/media/gmp/GMPCDMCallbackProxy.h:10:30: fatal error: mozilla/CDMProxy.h: No such file or directory
Blocks: 1284809
| Assignee | ||
Comment 3•9 years ago
|
||
Hi glandium,
I want to reproduce this issue locally but meet a build error.
I set |ac_add_options --disable-eme| in my mozconfig file and ./mach build
The error is
WebIDL.WebIDLError: error: Unresolved type '<unresolved scope>::MediaKeys'., /media/hdd/Projects/gecko-mozilla2/obj-x86_64-pc-linux-gnu/dom/bindings/HTMLMediaElement.webidl line 161:21
0:56.81 readonly attribute MediaKeys? mediaKeys;
But this attribute is protected by [1], I don't know why I met this issue...
I think --disable-eme is something about the macro MOZ_EME but I don't know the relations between
--enable-xxx and --disable-xxx.
I guess it is related to [2]
Could you please help me to clarify this symptom?
Thank you!
[1] https://dxr.mozilla.org/mozilla-central/rev/e78975b53563d80c99ebfbdf8a9fbf6b829a8a48/dom/webidl/HTMLMediaElement.webidl#158
[2] https://dxr.mozilla.org/mozilla-central/rev/e78975b53563d80c99ebfbdf8a9fbf6b829a8a48/toolkit/moz.configure#370
Flags: needinfo?(mh+mozilla)
| Assignee | ||
Comment 4•9 years ago
|
||
Hi glandium,
I tried
./mach configure --> no use.
./mach build-backend --> no use.
Eventually,
./mach clobber is OK to fix comment3
I would like to know what is the best way to deal with this situation.
Thank you.
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 7•9 years ago
|
||
Hi Chris,
I ignore to consider the EME disabled case so this patch is trying to fix those build fail.
I create a MediaCommon.h that is intended to centralize lots of "preference string", "common usage string" or any other common types to this file.
Please review this patch,
Thank you very much.
| Comment hidden (mozreview-request) |
| Reporter | ||
Comment 9•9 years ago
|
||
(In reply to James Cheng[:JamesCheng] from comment #4)
> Hi glandium,
>
> I tried
>
> ./mach configure --> no use.
>
> ./mach build-backend --> no use.
>
> Eventually,
> ./mach clobber is OK to fix comment3
>
> I would like to know what is the best way to deal with this situation.
>
> Thank you.
Some kinds of changes to mozconfig can require a clobber, that's the sad state of our build system, unfortunately.
Flags: needinfo?(mh+mozilla)
| Assignee | ||
Comment 10•9 years ago
|
||
Attach treeherder result to ensure the build success.
Build with --disable-eme
https://treeherder.mozilla.org/#/jobs?repo=try&revision=0fbf85a4b33b
Build without --disable-eme
https://treeherder.mozilla.org/#/jobs?repo=try&revision=72189dcd0599&selectedJob=25354903
Updated•9 years ago
|
Rank: 15
Priority: -- → P1
Comment 11•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8779181 [details]
Bug 1293194 - Building with --disable-eme fails with GMPDecoderModule.cpp:15:30: fatal error: mozilla/EMEUtils.h: No such file or directory.
https://reviewboard.mozilla.org/r/70216/#review67918
::: dom/media/MediaCommon.h:13
(Diff revision 3)
> +#define MeidaCommon_h_
> +
> +namespace mozilla {
> + namespace {
> + // EME Key System String.
> + const char* const kEMEKeySystemClearkey = "org.w3.clearkey";
How about just putting these in VideoUtils.h?
Attachment #8779181 -
Flags: review?(cpearce) → review+
| Assignee | ||
Comment 12•9 years ago
|
||
Thanks for reviewing.
I will put those into VideoUtils.h
Thank you.
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 14•9 years ago
|
||
carry r+ and move into VideoUtils.h
Thanks
Keywords: checkin-needed
Comment 15•9 years ago
|
||
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/59e4fc48a9b4
Building with --disable-eme fails with GMPDecoderModule.cpp:15:30: fatal error: mozilla/EMEUtils.h: No such file or directory. r=cpearce
Keywords: checkin-needed
Comment 16•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox51:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Comment 17•9 years ago
|
||
This bug also affects beta. Could you please uplift the fix?
Thanks
| Assignee | ||
Comment 18•9 years ago
|
||
| Assignee | ||
Comment 19•9 years ago
|
||
Comment on attachment 8779181 [details]
Bug 1293194 - Building with --disable-eme fails with GMPDecoderModule.cpp:15:30: fatal error: mozilla/EMEUtils.h: No such file or directory.
Approval Request Comment
[Feature/regressing bug #]:Bug 1284809, Bug 1288320
[User impact if declined]:NA
[Describe test coverage new/current, TreeHerder]:NA
[Risks and why]:
If --disable-eme to build aurora, it will build fail without this patch.
So this patch is to fix the build fail on Aurora.
Attachment #8779181 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 20•9 years ago
|
||
Attach treeherder result to ensure build OK for Aurora.
enable-eme
https://treeherder.mozilla.org/#/jobs?repo=try&revision=a55ccb59ab43
--disable-eme
https://treeherder.mozilla.org/#/jobs?repo=try&revision=b8996c98fd88
status-firefox50:
--- → affected
Comment on attachment 8779181 [details]
Bug 1293194 - Building with --disable-eme fails with GMPDecoderModule.cpp:15:30: fatal error: mozilla/EMEUtils.h: No such file or directory.
Makes sense, Aurora50+
Attachment #8779181 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
status-firefox49:
--- → ?
Comment 22•9 years ago
|
||
| bugherder uplift | ||
Comment 23•9 years ago
|
||
My apologies, I was confused by a series of coincidences.
The build failure of beta 49 with --disable-eme is different and unrelated to this bug.
You need to log in
before you can comment on or make changes to this bug.
Description
•